--- a/add-items-react/index.html
+++ b/add-items-react/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
-    <meta name="description" content="" />
+    <meta name="description" content="Prueba técnica de React" />
   </head>
   <body>
     <div id="root"></div>
